--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,91 @@
+astroid==2.8.5
+async-generator==1.10
+attrs==21.2.0
+backcall==0.2.0
+backports.entry-points-selectable==1.1.1
+beautifulsoup4==4.10.0
+boto==2.49.0
+certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.7
+click==8.0.3
+colorama==0.4.4
+commonmark==0.9.1
+configparser==5.1.0
+crayons==0.4.0
+cryptography==35.0.0
+cssselect==1.1.0
+decorator==5.1.0
+distlib==0.3.3
+execnet==1.9.0
+fasteners==0.16.3
+filelock==3.3.2
 Flask==2.0.2
+h11==0.12.0
+idna==3.3
+iniconfig==1.1.1
+ipdb==0.13.9
+ipython==7.29.0
+isort==5.10.1
+itsdangerous==2.0.1
+jedi==0.18.0
+Jinja2==3.0.3
+lazy-object-proxy==1.6.0
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.3
+mccabe==0.6.1
+more-itertools==8.11.0
+nose==1.3.7
+outcome==1.1.0
+packaging==21.2
+parameterized==0.8.1
+parso==0.8.2
+pdfminer.six==20211012
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.4.0
+platformdirs==2.4.0
+pluggy==1.0.0
+prompt-toolkit==3.0.22
+ptyprocess==0.7.0
+py==1.11.0
+pycparser==2.21
+Pygments==2.10.0
+pylint==2.11.1
+PyMySQL==1.0.2
+pyOpenSSL==21.0.0
+pyotp==2.6.0
+pyparsing==2.4.7
+pytest==6.2.5
+pytest-forked==1.3.0
+pytest-html==2.0.1
+pytest-metadata==1.11.0
+pytest-ordering==0.6
+pytest-rerunfailures==10.2
+pytest-xdist==2.4.0
+PyYAML==6.0
+requests==2.26.0
+rich==10.13.0
+sbvirtualdisplay==1.0.0
+selenium==4.0.0
+seleniumbase==2.1.6
+setuptools-scm==6.3.2
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3
+toml==0.10.2
+tomli==1.2.2
+tornado==6.1
+traitlets==5.1.1
+trio==0.19.0
+trio-websocket==0.9.2
+typing_extensions==4.0.0
+urllib3==1.26.7
+virtualenv==20.10.0
+wcwidth==0.2.5
+webdriver-manager==3.5.2
+Werkzeug==2.0.2
+wrapt==1.13.3
+wsproto==1.0.0
